err/zenpad.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zenpad'...
Compiling './lib/python3.5/site-packages/zenpad/filepad.py'...
***   File "./lib/python3.5/site-packages/zenpad/filepad.py", line 638
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zenpad/trans.py'...
***   File "./lib/python3.5/site-packages/zenpad/trans.py", line 20
    ur"""

This module translates national characters into similar sounding
latin characters (transliteration).
At the moment, Czech, Greek, Latvian, Polish, Turkish, Russian, Ukrainian
alphabets are supported (it covers 99% of needs).

  >>> # coding: utf-8
  >>> import trans
  >>> u'Hello World!'.encode('trans')
  u'Hello World!'
  >>> u'Привет, Мир!'.encode('trans')
  u'Privet, Mir!'

Читайте документацию для того, чтобы узнать больше.
Please read the documentation for 

"""
         

                                                                
                                   
                                                                         
                                                 

                     
                  
                                     
                 
                                     
                 

                                                   
                                  

  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zenpad/ui'...
Compiling './lib/python3.5/site-packages/zenpad/zenpad.py'...
***   File "./lib/python3.5/site-packages/zenpad/zenpad.py", line 576
    except filepad.SyncError, ex:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zenpad-0.0.11.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
